--- a/authentication/login.html
+++ b/authentication/login.html
@@ -19,6 +19,14 @@
     <link rel="stylesheet" href="../assets/css/style.min.css" />
   </head>
   <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 mx-md-auto">
+          <div class="authentication"></div>
+        </div>
+      </div>
+    </div>
+
     <!-- BOOTSTRAP JS -->
     <script src="../assets/js/bootstrap/bootstrap.bundle.min.js"></script>
   </body>
