--- a/index.html
+++ b/index.html
@@ -25,11 +25,223 @@
         <a href="index.html" class="logo">
           <img src="assets/images/logo/logo.svg" alt="logo" />
         </a>
+
+        <ul class="mobilemenu">
+          <li class="mobilemenu-item">
+            <button type="button" class="mobilemenu-link mobile">
+              <svg
+                width="28"
+                height="18"
+                viewBox="0 0 28 18"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M17.5995 17.3246H0.976152C0.717317 17.3246 0.469083 17.2207 0.286059 17.0358C0.103035 16.8509 0.000213273 16.6001 0.000213273 16.3386C0.000213273 16.077 0.103035 15.8262 0.286059 15.6413C0.469083 15.4564 0.717317 15.3525 0.976152 15.3525H17.5995C17.8584 15.3525 18.1066 15.4564 18.2896 15.6413C18.4726 15.8262 18.5755 16.077 18.5755 16.3386C18.5755 16.6001 18.4726 16.8509 18.2896 17.0358C18.1066 17.2207 17.8584 17.3246 17.5995 17.3246ZM27.0262 9.64963H0.976152C0.717317 9.64963 0.469083 9.54574 0.286059 9.36083C0.103035 9.17591 0.000213273 8.92511 0.000213273 8.66359C0.000213273 8.40208 0.103035 8.15128 0.286059 7.96636C0.469083 7.78144 0.717317 7.67756 0.976152 7.67756H27.0241C27.2829 7.67756 27.5311 7.78144 27.7142 7.96636C27.8972 8.15128 28 8.40208 28 8.66359C28 8.92511 27.8972 9.17591 27.7142 9.36083C27.5311 9.54574 27.2829 9.64963 27.0241 9.64963H27.0262ZM17.5995 1.9725H0.976152C0.71726 1.9725 0.468972 1.8686 0.285908 1.68364C0.102844 1.49868 0 1.24782 0 0.986252C0 0.724682 0.102844 0.473825 0.285908 0.288867C0.468972 0.103908 0.71726 0 0.976152 0L17.5995 0C17.8584 0 18.1067 0.103908 18.2898 0.288867C18.4728 0.473825 18.5757 0.724682 18.5757 0.986252C18.5757 1.24782 18.4728 1.49868 18.2898 1.68364C18.1067 1.8686 17.8584 1.9725 17.5995 1.9725Z"
+                  fill="#004D8D"
+                />
+              </svg>
+            </button>
+          </li>
+
+          <li class="mobilemenu-item">
+            <button type="button" class="mobilemenu-link search">
+              <svg
+                width="21"
+                height="20"
+                viewBox="0 0 21 20"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <g clip-path="url(#searchmobileicon)">
+                  <path
+                    d="M13.4172 11.6667H12.7588L12.5255 11.4417C13.3422 10.4917 13.8338 9.25833 13.8338 7.91667C13.8338 4.925 11.4088 2.5 8.41715 2.5C5.42549 2.5 3.00049 4.925 3.00049 7.91667C3.00049 10.9083 5.42549 13.3333 8.41715 13.3333C9.75882 13.3333 10.9922 12.8417 11.9422 12.025L12.1672 12.2583V12.9167L16.3338 17.075L17.5755 15.8333L13.4172 11.6667ZM8.41715 11.6667C6.34215 11.6667 4.66715 9.99167 4.66715 7.91667C4.66715 5.84167 6.34215 4.16667 8.41715 4.16667C10.4922 4.16667 12.1672 5.84167 12.1672 7.91667C12.1672 9.99167 10.4922 11.6667 8.41715 11.6667Z"
+                    fill="#C2CFE0"
+                  />
+                </g>
+                <defs>
+                  <clipPath id="searchmobileicon">
+                    <rect
+                      width="20"
+                      height="20"
+                      fill="white"
+                      transform="translate(0.500488)"
+                    />
+                  </clipPath>
+                </defs>
+              </svg>
+            </button>
+          </li>
+
+          <li class="mobilemenu-item">
+            <button
+              type="button"
+              class="mobilemenu-link live"
+              data-bs-toggle="tooltip"
+              data-bs-placement="bottom"
+              data-bs-title="Go Live"
+            >
+              <svg
+                width="25"
+                height="24"
+                viewBox="0 0 25 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <mask id="goliveicon" x="0" y="0" width="25" height="24">
+                  <rect x="0.502441" width="24" height="24" fill="#D9D9D9" />
+                </mask>
+                <g mask="url(#goliveicon)">
+                  <path
+                    d="M1.50244 12C1.50244 10.4667 1.79011 9.03333 2.36544 7.7C2.94011 6.36667 3.72744 5.204 4.72744 4.212C5.72744 3.22067 6.89411 2.43733 8.22744 1.862C9.56077 1.28733 10.9858 1 12.5024 1C14.0191 1 15.4441 1.28733 16.7774 1.862C18.1108 2.43733 19.2774 3.22067 20.2774 4.212C21.2774 5.204 22.0651 6.36667 22.6404 7.7C23.2151 9.03333 23.5024 10.4667 23.5024 12H21.5024C21.5024 10.75 21.2651 9.579 20.7904 8.487C20.3151 7.39567 19.6691 6.44167 18.8524 5.625C18.0358 4.80833 17.0818 4.16667 15.9904 3.7C14.8984 3.23333 13.7358 3 12.5024 3C11.2691 3 10.1064 3.23333 9.01444 3.7C7.92311 4.16667 6.96911 4.80833 6.15244 5.625C5.33577 6.44167 4.68977 7.39567 4.21444 8.487C3.73977 9.579 3.50244 10.75 3.50244 12H1.50244ZM5.50244 12C5.50244 10.0333 6.18577 8.375 7.55244 7.025C8.91911 5.675 10.5691 5 12.5024 5C14.4358 5 16.0858 5.675 17.4524 7.025C18.8191 8.375 19.5024 10.0333 19.5024 12H17.5024C17.5024 10.6167 17.0151 9.43733 16.0404 8.462C15.0651 7.48733 13.8858 7 12.5024 7C11.1191 7 9.94011 7.48733 8.96544 8.462C7.99011 9.43733 7.50244 10.6167 7.50244 12H5.50244ZM9.50244 22.4L8.10244 21L11.5024 17.6V14.3C11.0524 14.1 10.6901 13.7917 10.4154 13.375C10.1401 12.9583 10.0024 12.5 10.0024 12C10.0024 11.3 10.2441 10.7083 10.7274 10.225C11.2108 9.74167 11.8024 9.5 12.5024 9.5C13.2024 9.5 13.7941 9.74167 14.2774 10.225C14.7608 10.7083 15.0024 11.3 15.0024 12C15.0024 12.5 14.8651 12.9583 14.5904 13.375C14.3151 13.7917 13.9524 14.1 13.5024 14.3V17.6L16.9024 21L15.5024 22.4L12.5024 19.4L9.50244 22.4Z"
+                    fill="#BD081C"
+                  />
+                </g>
+              </svg>
+            </button>
+          </li>
+
+          <li class="mobilemenu-item">
+            <button
+              type="button"
+              class="mobilemenu-link upload"
+              data-bs-toggle="tooltip"
+              data-bs-placement="bottom"
+              data-bs-title="Upload Video"
+            >
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <mask
+                  id="upmobileicon"
+                  style="mask-type: alpha"
+                  maskUnits="userSpaceOnUse"
+                  x="0"
+                  y="0"
+                  width="25"
+                  height="24"
+                >
+                  <rect x="0.000488281" width="24" height="24" fill="#D9D9D9" />
+                </mask>
+                <g mask="url(#upmobileicon)">
+                  <path
+                    d="M6.00049 20C5.45049 20 4.97982 19.8043 4.58849 19.413C4.19649 19.021 4.00049 18.55 4.00049 18V15H6.00049V18H18.0005V15H20.0005V18C20.0005 18.55 19.8048 19.021 19.4135 19.413C19.0215 19.8043 18.5505 20 18.0005 20H6.00049ZM11.0005 16V7.85L8.40049 10.45L7.00049 9L12.0005 4L17.0005 9L15.6005 10.45L13.0005 7.85V16H11.0005Z"
+                    fill="white"
+                  />
+                </g>
+              </svg>
+            </button>
+          </li>
+
+          <li class="mobilemenu-item">
+            <button type="button" class="mobilemenu-link user">
+              <img src="assets/images/avatar/avatar.png" alt="user-avatar" />
+            </button>
+
+            <div class="userdropdown">
+              <ul class="userlist">
+                <li class="userlist-item">
+                  <a href="authentication/profile.html" class="userlist-link">
+                    <span class="icon">
+                      <svg
+                        width="17"
+                        height="16"
+                        viewBox="0 0 17 16"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <mask
+                          id="accountmobileicon"
+                          style="mask-type: alpha"
+                          maskUnits="userSpaceOnUse"
+                          x="0"
+                          y="0"
+                          width="17"
+                          height="16"
+                        >
+                          <path
+                            fill-rule="evenodd"
+                            clip-rule="evenodd"
+                            d="M10.3809 5C10.3809 6.10457 9.48543 7 8.38086 7C7.27629 7 6.38086 6.10457 6.38086 5C6.38086 3.89543 7.27629 3 8.38086 3C9.48543 3 10.3809 3.89543 10.3809 5ZM8.38086 8C10.0377 8 11.3809 6.65685 11.3809 5C11.3809 3.34315 10.0377 2 8.38086 2C6.72401 2 5.38086 3.34315 5.38086 5C5.38086 6.65685 6.72401 8 8.38086 8ZM14.3809 13C14.3809 14 13.3809 14 13.3809 14H3.38086C3.38086 14 2.38086 14 2.38086 13C2.38086 12 3.38086 9 8.38086 9C13.3809 9 14.3809 12 14.3809 13ZM13.3808 12.9965C13.3794 12.7497 13.2271 12.0104 12.5487 11.3321C11.8965 10.6798 10.67 10 8.38085 10C6.09174 10 4.86521 10.6798 4.21296 11.3321C3.53461 12.0104 3.38228 12.7497 3.38086 12.9965H13.3808Z"
+                            fill="black"
+                          />
+                        </mask>
+                        <g mask="url(#accountmobileicon)">
+                          <rect
+                            x="0.380859"
+                            width="16"
+                            height="16"
+                            fill="#425466"
+                          />
+                        </g>
+                      </svg>
+                    </span>
+                    <span class="text">My Account</span>
+                  </a>
+                </li>
+
+                <li class="userlist-item">
+                  <a href="authentication/login.html" class="userlist-link">
+                    <span class="icon">
+                      <svg
+                        width="17"
+                        height="16"
+                        viewBox="0 0 17 16"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <mask
+                          id="logoutmobileicon"
+                          style="mask-type: alpha"
+                          maskUnits="userSpaceOnUse"
+                          x="0"
+                          y="0"
+                          width="17"
+                          height="16"
+                        >
+                          <path
+                            fill-rule="evenodd"
+                            clip-rule="evenodd"
+                            d="M6.38086 12.5C6.38086 12.7761 6.60472 13 6.88086 13L14.8809 13C15.157 13 15.3809 12.7761 15.3809 12.5L15.3809 3.5C15.3809 3.22386 15.157 3 14.8809 3L6.88086 3C6.60472 3 6.38086 3.22386 6.38086 3.5L6.38086 5.5C6.38086 5.77614 6.157 6 5.88086 6C5.60472 6 5.38086 5.77614 5.38086 5.5L5.38086 3.5C5.38086 2.67157 6.05243 2 6.88086 2L14.8809 2C15.7093 2 16.3809 2.67157 16.3809 3.5L16.3809 12.5C16.3809 13.3284 15.7093 14 14.8809 14L6.88086 14C6.05243 14 5.38086 13.3284 5.38086 12.5L5.38086 10.5C5.38086 10.2239 5.60472 10 5.88086 10C6.157 10 6.38086 10.2239 6.38086 10.5L6.38086 12.5Z"
+                            fill="black"
+                          />
+                          <path
+                            fill-rule="evenodd"
+                            clip-rule="evenodd"
+                            d="M0.527306 8.35355C0.332044 8.15829 0.332044 7.84171 0.527306 7.64645L3.52731 4.64645C3.72257 4.45118 4.03915 4.45118 4.23441 4.64645C4.42967 4.84171 4.42967 5.15829 4.23441 5.35355L2.08797 7.5L10.8809 7.5C11.157 7.5 11.3809 7.72386 11.3809 8C11.3809 8.27614 11.157 8.5 10.8809 8.5L2.08797 8.5L4.23441 10.6464C4.42968 10.8417 4.42968 11.1583 4.23441 11.3536C4.03915 11.5488 3.72257 11.5488 3.52731 11.3536L0.527306 8.35355Z"
+                            fill="black"
+                          />
+                        </mask>
+                        <g mask="url(#logoutmobileicon)">
+                          <rect
+                            x="0.380859"
+                            width="16"
+                            height="16"
+                            fill="#425466"
+                          />
+                        </g>
+                      </svg>
+                    </span>
+                    <span class="text">Logout</span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+
+        <ul class="desktopmenu"></ul>
       </nav>
     </header>
     <!-- HEADER SECTION END -->
 
     <!-- BOOTSTRAP JS -->
     <script src="assets/js/bootstrap/bootstrap.bundle.min.js"></script>
+    <!-- TOOLTIP JS -->
+    <script src="assets/js/tooltip/tooltip.js"></script>
   </body>
 </html>
