mobile header and offcanvas completed

--- a/index.html
+++ b/index.html
@@ -22,10 +22,127 @@
     <!-- HEADER SECTION START -->
     <header class="header sticky-top">
       <nav class="header-nav">
+        <!-- CHANNEL DROPDOWN START -->
+        <div class="channeldropdown">
+          <div class="dropdowninfo">
+            <figure class="icon">
+              <img src="assets/images/user/user.png" alt="user-thumbnail" />
+            </figure>
+
+            <span class="icon">
+              <svg
+                width="25"
+                height="24"
+                viewBox="0 0 25 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <mask id="dashaddicon" x="0" y="0" width="25" height="24">
+                  <rect x="0.218994" width="24" height="24" fill="#D9D9D9" />
+                </mask>
+                <g mask="url(#dashaddicon)">
+                  <path
+                    d="M12.219 15.3751L6.21899 9.3751L7.61899 7.9751L12.219 12.5751L16.819 7.9751L18.219 9.3751L12.219 15.3751Z"
+                    fill="#4B4B4C"
+                  />
+                </g>
+              </svg>
+            </span>
+          </div>
+
+          <div class="dropdownitems">
+            <ul class="dropdownlist">
+              <li class="dropdownlist-item">
+                <a href="#" class="dropdownlist-link">
+                  <span class="icon">
+                    <img
+                      src="assets/images/user/user.png"
+                      alt="user-thumbnail"
+                    />
+                  </span>
+                  <span class="text">Mega Bangla Tv</span>
+                </a>
+              </li>
+
+              <li class="dropdownlist-item">
+                <a href="#" class="dropdownlist-link">
+                  <span class="icon">
+                    <img
+                      src="assets/images/user/user.png"
+                      alt="user-thumbnail"
+                    />
+                  </span>
+                  <span class="text">Muslim TV</span>
+                </a>
+              </li>
+
+              <li class="dropdownlist-item">
+                <a href="#" class="dropdownlist-link">
+                  <span class="icon">
+                    <img
+                      src="assets/images/user/user.png"
+                      alt="user-thumbnail"
+                    />
+                  </span>
+                  <span class="text">Mega Bangla Tv</span>
+                </a>
+              </li>
+
+              <li class="dropdownlist-item">
+                <a href="#" class="dropdownlist-link active">
+                  <span class="icon">
+                    <img
+                      src="assets/images/user/user.png"
+                      alt="user-thumbnail"
+                    />
+                  </span>
+                  <span class="text">Mega Bangla Tv</span>
+                </a>
+              </li>
+
+              <li class="dropdownlist-item">
+                <button type="button" class="btn-create">
+                  <span class="icon">
+                    <svg
+                      width="26"
+                      height="24"
+                      viewBox="0 0 26 24"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <circle cx="12.6953" cy="12" r="12" fill="#E2E8F0" />
+                      <mask id="dashaddicon" x="4" y="4" width="17" height="16">
+                        <rect
+                          x="4.69531"
+                          y="4"
+                          width="16"
+                          height="16"
+                          fill="#D9D9D9"
+                        />
+                      </mask>
+                      <g mask="url(#dashaddicon)">
+                        <path
+                          d="M12.0286 16.6666V12.6666H8.02865V11.3333H12.0286V7.33325H13.362V11.3333H17.362V12.6666H13.362V16.6666H12.0286Z"
+                          fill="#4A5568"
+                        />
+                      </g>
+                    </svg>
+                  </span>
+                  <span class="text">Create Channel</span>
+                </button>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- CHANNEL DROPDOWN END -->
+
+        <!-- LOGO START -->
         <a href="index.html" class="logo">
           <img src="assets/images/logo/logo.svg" alt="logo" />
         </a>
+        <!-- LOGO END -->
 
+        <!-- MOBILE-MENU START -->
         <ul class="mobilemenu">
           <li class="mobilemenu-item">
             <button type="button" class="mobilemenu-link search">
@@ -120,8 +237,11 @@
             </button>
           </li>
         </ul>
+        <!-- MOBILE-MENU END -->
 
+        <!-- DESKTOP-MENU START -->
         <ul class="desktopmenu"></ul>
+        <!-- DESKTOP-MENU END -->
       </nav>
     </header>
     <!-- HEADER SECTION END -->
@@ -339,7 +459,7 @@
                 </li>
 
                 <li class="mobilelist-item">
-                  <a href="support.html" class="mobilelist-link">
+                  <a href="support.html" class="mobilelist-link support">
                     <span class="icon">
                       <svg
                         width="21"
@@ -375,7 +495,7 @@
                 </li>
 
                 <li class="mobilelist-item">
-                  <a href="settings.html" class="mobilelist-link">
+                  <a href="settings.html" class="mobilelist-link settings">
                     <span class="icon">
                       <svg
                         width="21"
