search box added on mobile view

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
         <!-- MOBILE-MENU START -->
         <ul class="mobilemenu">
-          <li class="mobilemenu-item">
+          <li class="mobilemenu-item searchitem">
             <button type="button" class="mobilemenu-link search">
               <svg
                 width="21"
@@ -171,6 +171,44 @@
                 </defs>
               </svg>
             </button>
+
+            <div class="searchdropdown">
+              <div class="searchbox">
+                <button class="btn-search">
+                  <svg
+                    width="21"
+                    height="20"
+                    viewBox="0 0 21 20"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <g clip-path="url(#dashsearchicon)">
+                      <path
+                        d="M13.4172 11.6667H12.7588L12.5255 11.4417C13.3422 10.4917 13.8338 9.25833 13.8338 7.91667C13.8338 4.925 11.4088 2.5 8.41715 2.5C5.42549 2.5 3.00049 4.925 3.00049 7.91667C3.00049 10.9083 5.42549 13.3333 8.41715 13.3333C9.75882 13.3333 10.9922 12.8417 11.9422 12.025L12.1672 12.2583V12.9167L16.3338 17.075L17.5755 15.8333L13.4172 11.6667ZM8.41715 11.6667C6.34215 11.6667 4.66715 9.99167 4.66715 7.91667C4.66715 5.84167 6.34215 4.16667 8.41715 4.16667C10.4922 4.16667 12.1672 5.84167 12.1672 7.91667C12.1672 9.99167 10.4922 11.6667 8.41715 11.6667Z"
+                        fill="#C2CFE0"
+                      />
+                    </g>
+                    <defs>
+                      <clipPath id="dashsearchicon">
+                        <rect
+                          width="20"
+                          height="20"
+                          fill="white"
+                          transform="translate(0.500488)"
+                        />
+                      </clipPath>
+                    </defs>
+                  </svg>
+                </button>
+                <div class="searchinput">
+                  <input
+                    type="search"
+                    placeholder="What are you looking for?"
+                    class="searchfield"
+                  />
+                </div>
+              </div>
+            </div>
           </li>
 
           <li class="mobilemenu-item">
