--- a/index.html
+++ b/index.html
@@ -203,9 +203,20 @@
                 <div class="searchinput">
                   <input
                     type="search"
-                    placeholder="What are you looking for?"
+                    id="mobilesearch-field"
                     class="searchfield"
+                    placeholder="What are you looking for?"
                   />
+                </div>
+
+                <div class="mobilesuggestion">
+                  <ul class="suggestionlist">
+                    <li class="suggestionlist-item">Search Item One</li>
+                    <li class="suggestionlist-item">Search Item Two</li>
+                    <li class="suggestionlist-item">Search Item Three</li>
+                    <li class="suggestionlist-item">Search Item Four</li>
+                    <li class="suggestionlist-item">Search Item Five</li>
+                  </ul>
                 </div>
               </div>
             </div>
@@ -626,5 +637,8 @@
     <script src="assets/js/bootstrap/bootstrap.bundle.min.js"></script>
     <!-- TOOLTIP JS -->
     <script src="assets/js/tooltip/tooltip.js"></script>
+
+    <!-- SEARCH-SUGGESTIONS -->
+    <script src="assets/js/search-suggestion/mobsuggestion.js"></script>
   </body>
 </html>
