--- a/authentication/register.html
+++ b/authentication/register.html
@@ -19,6 +19,94 @@
     <link rel="stylesheet" href="../assets/css/style.min.css" />
   </head>
   <body>
+    <!-- AUTHENTICATION START -->
+    <main class="authentication">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-7 col-lg-6 mx-md-auto">
+            <form class="authenticationform">
+              <div class="authenticationform-header">
+                <a href="../index.html" class="logo">
+                  <img src="../assets/images/logo/logo.svg" alt="logo" />
+                </a>
+
+                <div class="titlebox">
+                  <h1 class="title">
+                    Create an account to contribute to Mahfil
+                  </h1>
+                </div>
+              </div>
+
+              <div class="authenticationform-body">
+                <div class="inputbox">
+                  <label for="regname" class="inputlabel">Name</label>
+                  <input
+                    type="text"
+                    id="regname"
+                    class="inputfield"
+                    placeholder="Enter full name"
+                  />
+                </div>
+
+                <div class="inputbox">
+                  <label for="regmail" class="inputlabel">Email</label>
+                  <input
+                    type="email"
+                    id="regmail"
+                    class="inputfield"
+                    placeholder="Enter email address"
+                  />
+                </div>
+
+                <div class="inputbox">
+                  <label for="regphone" class="inputlabel">Phone Number</label>
+                  <input
+                    type="text"
+                    id="regphone"
+                    class="inputfield"
+                    placeholder="Enter phone number"
+                  />
+                </div>
+
+                <div class="inputbox">
+                  <label for="regpassword" class="inputlabel">Password</label>
+                  <input
+                    type="text"
+                    id="regpassword"
+                    class="inputfield"
+                    placeholder="Enter password"
+                  />
+                </div>
+
+                <div class="inputbox">
+                  <label for="regconfrimpass" class="inputlabel"
+                    >Confirm Password</label
+                  >
+                  <input
+                    type="text"
+                    id="regconfrimpass"
+                    class="inputfield"
+                    placeholder="Confirm password"
+                  />
+                </div>
+              </div>
+
+              <div class="authenticationform-footer">
+                <div class="submit">
+                  <button type="submit" class="btn-submit">Sign Up</button>
+                </div>
+                <div class="authentictext">
+                  <span class="text">Alreasy have an account?</span>
+                  <a href="login.html" class="link">Login</a>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </main>
+    <!-- AUTHENTICATION END -->
+
     <!-- BOOTSTRAP JS -->
     <script src="../assets/js/bootstrap/bootstrap.bundle.min.js"></script>
   </body>
