login, register mobile gap fix

--- a/authentication/register.html
+++ b/authentication/register.html
@@ -39,54 +39,61 @@
 
               <div class="authenticationform-body">
                 <div class="inputbox">
-                  <label for="regname" class="inputlabel">Name</label>
+                  <label for="regname" class="inputlabel"> Name </label>
                   <input
                     type="text"
                     id="regname"
                     class="inputfield"
                     placeholder="Enter full name"
+                    autocomplete="off"
                   />
                 </div>
 
                 <div class="inputbox">
-                  <label for="regmail" class="inputlabel">Email</label>
+                  <label for="regmail" class="inputlabel"> Email </label>
                   <input
                     type="email"
                     id="regmail"
                     class="inputfield"
                     placeholder="Enter email address"
+                    autocomplete="off"
                   />
                 </div>
 
                 <div class="inputbox">
-                  <label for="regphone" class="inputlabel">Phone Number</label>
+                  <label for="regphone" class="inputlabel">
+                    Phone Number
+                  </label>
                   <input
                     type="text"
                     id="regphone"
                     class="inputfield"
                     placeholder="Enter phone number"
+                    autocomplete="off"
                   />
                 </div>
 
                 <div class="inputbox">
-                  <label for="regpassword" class="inputlabel">Password</label>
+                  <label for="regpassword" class="inputlabel"> Password </label>
                   <input
                     type="text"
                     id="regpassword"
                     class="inputfield"
                     placeholder="Enter password"
+                    autocomplete="off"
                   />
                 </div>
 
                 <div class="inputbox">
-                  <label for="regconfrimpass" class="inputlabel"
-                    >Confirm Password</label
-                  >
+                  <label for="regconfrimpass" class="inputlabel">
+                    Confirm Password
+                  </label>
                   <input
                     type="text"
                     id="regconfrimpass"
                     class="inputfield"
                     placeholder="Confirm password"
+                    autocomplete="off"
                   />
                 </div>
               </div>
