--- a/authentication/login.html
+++ b/authentication/login.html
@@ -37,23 +37,27 @@
 
               <div class="authenticationform-body">
                 <div class="inputbox">
-                  <label for="logmail" class="inputlabel">Email</label>
+                  <label for="logmail" class="inputlabel"> Email </label>
                   <input
                     type="email"
                     id="logmail"
                     class="inputfield"
                     placeholder="Enter email address"
+                    autocomplete="off"
                   />
                 </div>
 
                 <div class="info">
                   <div class="inputbox">
-                    <label for="logpassword" class="inputlabel">Password</label>
+                    <label for="logpassword" class="inputlabel">
+                      Password
+                    </label>
                     <input
                       type="text"
                       id="logpassword"
                       class="inputfield"
                       placeholder="Enter password"
+                      autocomplete="off"
                     />
                   </div>
 
